# cmems-backend

./: .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  requirements.txt  setup.cfg
.github/workflows/: build-and-push.yaml
cmems/: app-dbg  app.py  setup_logging.py
tests/: conftest.py  test_app.py  test_ch4.py  test_cmems.py
