[metadata]
name = cmems
version = attr: cmems.__version__
author = Nikola Jankovic
author_email = nikola.jankovic@eox.at
license = MIT
description = Visualization component
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
package_dir =
include_package_data = True
python_requires = >=3.9

[options.packages.find]
where = .
exclude =
    tests

[options.package_data]
cmems = *.json

[mypy]
exclude = (.tox|build|dist|.eggs|docs/conf.py|.venv|__init__.py)
ignore_missing_imports = True

[tool:pytest]
# avoid warning: https://github.com/pytest-dev/pytest-asyncio/issues/924#issuecomment-2326877541
asyncio_mode=auto
asyncio_default_fixture_loop_scope="function"
